--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,17 @@ repositories {
 }
 
 dependencies {
+
     shadow localGroovy()
     shadow gradleApi()
-
-    implementation 'org.rauschig:jarchivelib:0.7.1'
     shadow group: 'org.apache.commons', name: 'commons-compress', version: '1.20'
     shadow group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.5.0'
+    shadow group: 'commons-io', name: 'commons-io', version: '2.8.0'
     testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
     testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
+
 }
 
 
