--- a/test-project/build.gradle
+++ b/test-project/build.gradle
@@ -45,12 +45,11 @@ configurations {
 }
 
 dependencies{
-    patchDependencies group: 'com.roche.modules.eppr', name: 'eppr-runtime', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe', because: "mcdonalds"
+    patchDependencies group: 'com.roche.modules.eppr', name: 'eppr-runtime', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe', because: "torrescusa needs it!!"
     patchDependencies group: 'com.roche.modules.qc', name: 'qc-core-runtime', version: '3.0.0.1-SNAPSHOT', classifier: 'installer', ext: 'exe'
     patchDependencies group: 'com.roche.modules', name: 'igen', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe'
     patchDependencies group: 'com.roche.modules.reports', name: 'infinity-reports-server-web', version: '1.0.0.0-ALPHA02', classifier: 'installer', ext: 'exe'
     // Missing patchDependencies 'com.roche.modules.commserver' ....
-
     patchDependencies group: 'com.roche.infinity', name: 'infinity-configurator', version: '2.0.0-ALPHA24', ext: 'zip'
     frontendpackages group: 'npm', name: 'infinity-ui-serviceability-hosts-wizard', version: '2.0.13', ext: 'tgz', because: "mcdonalds"
 }
@@ -59,7 +58,6 @@ apply plugin: 'org.devopsmindset.dependency-manager'
 
 dependenciesManagement {
     configurations = [['patchDependencies'], ['frontendpackages']]
-    separateByGroupId = [true, true]
     stripVersion = [true, true]
     decompress = [true, true]
 }
