--- a/test-project/build.gradle
+++ b/test-project/build.gradle
@@ -53,11 +53,12 @@ dependencies{
     // Missing patchDependencies 'com.roche.modules.commserver' ....
     patchDependencies group: 'com.roche.infinity', name: 'infinity-configurator', version: '2.0.0-ALPHA24', ext: 'zip'
     frontendpackages group: 'npm', name: 'infinity-ui-serviceability-hosts-wizard', version: '2.0.13', ext: 'tgz', because: "mcdonalds"
-    base group:'org.devopsmindset.gradle', name: 'dependency-manager', version: '0.0.1', ext: 'json', classifier: 'dependencies'
+    base group:'org.devopsmindset.gradle', name: 'dependency-manager', version: '0.0.1', ext: 'dependencies'
 }
 
 apply plugin: 'org.devopsmindset.dependency-manager'
 
 dependenciesManagement {
-    configurations = [['patchDependencies','frontendpackages']]
+    configurations = [['patchDependencies'],['frontendpackages']]
+    decompress = [true, false]
 }
