--- a/test-project/build.gradle
+++ b/test-project/build.gradle
@@ -21,6 +21,8 @@ repositories {
     }
 }
 
+
+
 buildscript {
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
         repositories {
@@ -52,13 +54,13 @@ dependencies{
     patchDependencies group: 'com.roche.modules.reports', name: 'infinity-reports-server-web', version: '1.0.0.0-ALPHA02', classifier: 'installer', ext: 'exe'
     // Missing patchDependencies 'com.roche.modules.commserver' ....
     patchDependencies group: 'com.roche.infinity', name: 'infinity-configurator', version: '2.0.0-ALPHA24', ext: 'zip'
-    frontendpackages group: 'npm', name: 'infinity-ui-serviceability-hosts-wizard', version: '2.0.13', ext: 'tgz', because: "mcdonalds"
-    base group:'org.devopsmindset.gradle', name: 'dependency-manager', version: '0.0.1', ext: 'dependencies'
+    frontendpackages group: 'npm', name: 'infinity-ui-serviceability-hosts-wizard', version: '2.0.14', ext: 'tgz', because: "mcdonalds"
+    //base group:'org.devopsmindset.gradle', name: 'dependency-manager', version: '0.0.1', ext: 'dependencies'
 }
 
 apply plugin: 'org.devopsmindset.dependency-manager'
 
 dependenciesManagement {
-    configurations = [['patchDependencies'],['frontendpackages']]
-    decompress = [true, false]
+    configurations = [['frontendpackages']]
 }
+
