--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'java-gradle-plugin'
     id "com.gradle.plugin-publish" version "0.12.0"
+    id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
-
+    id "com.jfrog.artifactory" version "4.15.2"
 }
 
 apply plugin: 'maven-publish'
@@ -22,7 +23,6 @@ dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
-
 }
 
 
@@ -38,15 +38,6 @@ gradlePlugin {
 }
 
 publishPlugins.dependsOn 'shadowJar'
-
-publishing {
-    publications {
-        shadow(MavenPublication) { publication ->
-            from project.shadow.component(publication)
-            artifactId = 'dependency-manager'
-        }
-    }
-}
 
 test {
     useJUnitPlatform()
@@ -65,4 +56,34 @@ pluginBundle {
             displayName = 'Dependency manager plugin'
         }
     }
+}
+
+
+// Overrides the jar publish phase - needed if jar.enabled is false
+tasks.matching { it.name == "publishPluginMavenPublicationToMavenRepository" }.all {
+    onlyIf { false }
+}
+
+tasks.jar.configure {
+    classifier = 'default'
+}
+
+shadowJar {
+    classifier = null
+    zip64 true
+}
+
+publishPlugins.dependsOn 'shadowJar'
+
+publishing {
+    publications {
+        shadow(MavenPublication) { publication ->
+            from project.shadow.component(publication)
+            artifactId = 'dependency-manager'
+        }
+    }
+}
+
+artifactoryPublish {
+    publications('shadow')
 }
