--- a/test-project/build.gradle
+++ b/test-project/build.gradle
@@ -48,7 +48,7 @@ configurations {
 }
 
 dependencies{
-    patchDependencies group: 'com.roche.modules.eppr', name: 'eppr-runtime', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe', because: "torrescusa needs it!!"
+    patchDependencies group: 'com.roche.modules.eppr', name: 'eppr-runtime', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe', because: "target:csp/acb/"
     patchDependencies group: 'com.roche.modules.qc', name: 'qc-core-runtime', version: '3.0.0.1-SNAPSHOT', classifier: 'installer', ext: 'exe'
     patchDependencies group: 'com.roche.modules', name: 'igen', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe'
     patchDependencies group: 'com.roche.modules.reports', name: 'infinity-reports-server-web', version: '1.0.0.0-ALPHA02', classifier: 'installer', ext: 'exe'
@@ -60,6 +60,10 @@ dependencies{
 
 apply plugin: 'org.devopsmindset.dependency-manager'
 
-
+dependenciesManagement {
+    configurations = [['patchDependencies'], ['frontendpackages']]
+    stripVersion = [true, false]
+    decompress = [false, true]
+}
 
 publishToMavenLocal.dependsOn("dependenciesDownload")
