--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     shadow group: 'org.apache.commons', name: 'commons-compress', version: '1.20'
     shadow group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.5.0'
     shadow group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    shadow group: 'net.lingala.zip4j', name: 'zip4j', version: '2.6.4'
     testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
     testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
     compileOnly 'org.projectlombok:lombok:1.18.4'
