--- a/test-project/build.gradle
+++ b/test-project/build.gradle
@@ -21,14 +21,12 @@ repositories {
     }
 }
 
-
-
 buildscript {
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
         repositories {
             mavenLocal()
             dependencies {
-                classpath "org.devopsmindset.gradle:dependency-manager:0.0.7-SNAPSHOT"
+                classpath "org.devopsmindset.gradle:dependency-manager:0.0.9-SNAPSHOT"
             }
         }
     }
@@ -42,7 +40,7 @@ buildscript {
 }
 
 configurations {
-    cspDepenency
+    cspDependency
     install4jDependencies
     base
 }
@@ -50,16 +48,16 @@ configurations {
 dependencies{
     //patchDependencies group: 'com.roche.modules.eppr', name: 'eppr-runtime', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe'
     //patchDependencies group: 'com.roche.modules.qc', name: 'qc-core-runtime', version: '3.0.0.1-SNAPSHOT', classifier: 'installer', ext: 'exe'
-    cspDepenency group: 'com.roche.modules', name: 'igen', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe', because: "target=."
+    cspDependency group: 'com.roche.modules', name: 'igen', version: '2.0.0-SNAPSHOT', classifier: 'installer', ext: 'exe', because: "target=."
     //patchDependencies group: 'com.roche.modules.reports', name: 'infinity-reports-server-web', version: '1.0.0.0-ALPHA02', classifier: 'installer', ext: 'exe', because: "target=csp"
     // Missing patchDependencies 'com.roche.modules.commserver' ....
-    cspDepenency group: 'com.roche.infinity', name: 'infinity-configurator', version: '2.0.0-ALPHA24', ext: 'zip', because: "decompress=.;target=toparse"
-    cspDepenency group: 'npm', name: 'infinity-ui-workarea-charts', version: '0.0.+', ext: 'tgz', because: "asdf"
-    cspDepenency group: 'npm', name: 'infinity-ui-serviceability-hosts-wizard', version: '2.0.+', ext: 'tgz', because: "decompress=."
-    cspDepenency group: 'npm', name: 'infinity-ui-serviceability-tunetable', version: '1.2.+', ext: 'tgz', because: "target=csp/serviceability-tunetable"
-    cspDepenency group: 'npm', name: 'infinity-ui-ruleengine-authoring', version: '1.0.+', ext: 'tgz', because: "target=csp/ruleengine/unzip;decompress=."
-    cspDepenency group: 'roche', name: 'components-library-ui', version: '1.1.+', ext: 'tgz', because: "target=csp/components/unzipPackage;decompress=package"
-    cspDepenency group: 'com.roche.sis.infinity', name: 'infinity-lis-gen-reports', version: '0.0.13', ext: 'zip', because: "decompress=.;target=csp/acb/LISPages"
+    cspDependency group: 'com.roche.infinity', name: 'infinity-configurator', version: '2.0.0-ALPHA24', ext: 'zip', because: "decompress=.;target=toparse"
+    cspDependency group: 'npm', name: 'infinity-ui-workarea-charts', version: '0.0.+', ext: 'tgz', because: "asdf"
+    cspDependency group: 'npm', name: 'infinity-ui-serviceability-hosts-wizard', version: '2.0.+', ext: 'tgz', because: "decompress=."
+    cspDependency group: 'npm', name: 'infinity-ui-serviceability-tunetable', version: '1.2.+', ext: 'tgz', because: "target=csp/serviceability-tunetable"
+    cspDependency group: 'npm', name: 'infinity-ui-ruleengine-authoring', version: '1.0.+', ext: 'tgz', because: "target=csp/ruleengine/unzip;decompress=."
+    cspDependency group: 'roche', name: 'components-library-ui', version: '1.1.+', ext: 'tgz', because: "target=csp/components/unzipPackage;decompress=package"
+    cspDependency group: 'com.roche.sis.infinity', name: 'infinity-lis-gen-reports', version: '0.0.13', ext: 'zip', because: "decompress=.;target=csp/acb/LISPages"
     //base group:'org.devopsmindset.gradle', name: 'dependency-manager', version: '0.0.1', ext: 'dependencies'
 
     install4jDependencies(group: 'com.ej-technologies', name: 'adoptopenjdk', version: "11.0.7_10", classifier: 'jre_x64_windows_hotspot', ext: 'tar.gz', because: "target=jre")
