--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ plugins {
     id 'maven-publish'
     id "com.jfrog.artifactory" version "4.15.2"
 }
-
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 apply plugin: 'maven-publish'
 
 repositories {
@@ -12,15 +13,15 @@ repositories {
 }
 
 dependencies {
-    compileOnly group: 'org.apache.commons', name: 'commons-compress', version: '1.20'
-    compileOnly group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.5.0'
-    compileOnly group: 'commons-io', name: 'commons-io', version: '2.8.0'
-    compileOnly group: 'net.lingala.zip4j', name: 'zip4j', version: '2.6.4'
-    testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
-    testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
-    compileOnly 'org.projectlombok:lombok:1.18.4'
+    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.20'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.5.0'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    implementation group: 'net.lingala.zip4j', name: 'zip4j', version: '2.6.4'
+    implementation "com.google.guava:guava:30.0-jre"
+    implementation 'org.projectlombok:lombok:1.18.4'
+    testImplementation 'org.junit.platform:junit-platform-commons:1.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
-    implementation("com.google.guava:guava:30.0-jre")
 }
 
 
