push to release branch on release.

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ gradlePlugin {
 }
 
 release{
+    pushReleaseVersionBranch = false
     git {
         requireBranch = 'feature/firstfeature'
     }
