--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build -x test
+    - name: release version
+      run: ./gradlew release -Prelease.useAutomaticVersion=true  
     - name: publish plugin
       run: ./gradlew publishPlugins
       env:
