--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build -x test
     - name: release version
-      run: ./gradlew release -Prelease.useAutomaticVersion=true  
+      run: ./gradlew release -Prelease.useAutomaticVersion=true -x test 
     - name: publish plugin
       run: ./gradlew publishPlugins
       env:
