--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Configure git credentials & release version
       uses: OleksiyRudenko/gha-git-credentials@v2
       with:
-        key: '${{ secrets.GITHUB_TOKEN }}'
+        token: '${{ secrets.GITHUB_TOKEN }}'
     - run: ./gradlew release -Prelease.useAutomaticVersion=true -x test 
     - name: publish plugin
       run: ./gradlew publishPlugins
