save environment variables
creating a gradle.properties file with the environment variables.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         token: '${{ secrets.GITHUB_TOKEN }}'
     - run: ./gradlew release -Prelease.useAutomaticVersion=true -x test 
-    - name: print environment variables
-      run: echo $gradle.publish.key and $gradle.publish.key
+    - name: save environment variables
+      run: echo -e "gradle.publish.key=${{ secrets.GRADLE_KEY }}\ngradle.publish.secret=${{ secrets.GRADLE_SECRET }}" > gradle.properties
     - name: publish plugin
       run: ./gradlew publishPlugins
