--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ feature/firstfeature ]
+    branches: [ master ]
   pull_request:
-    branches: [ feature/firstfeature ]
+    branches: [ master ]
 
 jobs:
   build:
