--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ release{
     failOnCommitNeeded = false
     pushReleaseVersionBranch = false
     git {
-        requireBranch = 'feature/firstfeature'
+        requireBranch = 'master'
     }
 }
 
