--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ apply plugin: 'maven-publish'
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
@@ -20,11 +21,11 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.5.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
     implementation group: 'net.lingala.zip4j', name: 'zip4j', version: '2.6.4'
-    implementation "com.google.guava:guava:30.0-jre"
-    implementation 'org.projectlombok:lombok:1.18.4'
-    testImplementation 'org.junit.platform:junit-platform-commons:1.6.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
-    annotationProcessor 'org.projectlombok:lombok:1.18.4'
+    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'org.projectlombok:lombok:1.18.22'
+    testImplementation 'org.junit.platform:junit-platform-commons:1.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
 
 gradlePlugin {
