add build-info-extractor dependency
add build-info-extractor dependency

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url "https://jfrog.bintray.com/jfrog-jars/" }
+    }
+}
+
 plugins {
     id 'java'
     id 'java-gradle-plugin'
